[package]
name = "stark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = true

[[bin]]
name = "prover"
path = "src/prover.rs"

[[bin]]
name = "verifier"
path = "src/verifier.rs"

[dependencies]
clap = { version = "3.1.17", features = ["derive"] }
log = { version = "0.4", default-features = false }
winter-prover = { version = "0.4", default-features = false, features = ["concurrent"] }
winter-verifier = { version = "0.4" }
winter-air = { version = "0.4" }
winter-math = { version = "0.4" }
winter-utils = { version = "0.4" }
confy = { version = "0.4" }
serde = { version = "^1.0", features = ["derive"] }
env_logger = { version = "0.9", default-features = false }
base64 = { version = "0.13.0" }